# agritech-latest

./: .env.example  .gitignore  README.md  agent.py  app.py  chat_llm.py  cli.py  db.py  docker-compose.yml  dump.rdb  graph.py  llm_logging.py  main.py  maize_knowledge_tree.json  pyproject.toml  requirements.txt  state.py  streamlit_app.py  tools.py
api/: auth.py  dependencies.py  rate_limit.py  routes.py
core/: config.py  database.py
data/markdowns/: farmerbook.md  (+4 more)
db_storage/: meta.json
docs/: codebase_architecture.md
models/: __init__.py  advisory_log.py  conversation.py
pipeline/: __init__.py  agent.py  agent_context.py  agent_guards.py  graph.py  llm_factory.py  logging_utils.py  safety.py  state.py
repositories/: __init__.py  advisory_repository.py  conversation_repository.py
sandbox/: benchmark_qdrant_sync.py  run_test_cases.py  streamlit_app.py  test_audio_tool.py  test_bighaat.py  test_chat.py  test_chat_audio_api.py  test_db_and_datetime.py  test_graph_rag.py  test_maize_faq_tool.py  test_memory.py  test_memory_context.py  test_pending_intent.py  test_profile_persistence.py  test_rag.py  test_rag1.py  test_real_rag.py  test_redis_memory.py  test_safety_node.py  test_see_qdrant_texts.py  test_tools.py  test_web_search.py
schemas/: advisory.py  chat.py  speech.py
scripts/: build_pageindex.py  deploy_ingest.py  ingest.py  ingest_maize_faq.py  ingest_markdown.py  ingestion_docling.py
services/: advisory.py  advisory_log.py  bm25.py  conversation.py  crop.py  embeddings.py  hybrid_retrieval.py  pageindex.py  speech.py  vectorstore.py  weather.py
(+37 files in other folders)
